--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -6,6 +6,10 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog^], 
 
 == Unreleased
 
+=== Changed
+
+- Change font in PDF output to support ♀ and ♂ symbols
+
 == 0.2.0 - 2021-01-24
 
 === Added
