--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -11,6 +11,10 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog^], 
 - Bump minimum required Ruby version to 2.5
 - Change font in PDF output to support ♀ and ♂ symbols
 
+=== Fixed
+
+- Make source code compatible with Ruby version 2.5
+
 == 0.2.0 - 2021-01-24
 
 === Added
