--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -8,6 +8,7 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog^], 
 
 === Changed
 
+- Sort the reports according to their GPS track
 - Bump minimum required Ruby version to 2.5
 - Change font in PDF output to support ♀ and ♂ symbols
 
