--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -10,6 +10,10 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog^], 
 
 - Support species lists from Vogelführer Birdlife Schweiz
 
+=== Fixed
+
+- Prevent conversion from being aborted if a built-in date/time attribute is missing
+
 == 0.6.0 - 2021-11-20
 
 === Fixed
