--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -8,6 +8,7 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog^], 
 
 === Added
 
+- Add support for Ruby 3.0 and 3.1
 - Support species lists from Vogelführer Birdlife Schweiz
 
 === Changed
