--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -8,7 +8,7 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog^], 
 
 === Added
 
-- Add command to create map images from GPS tracks.
+- Add command to create map images from GPS tracks, waypoints and routes.
 - Add command line option to display the version of this gem.
 
 === Changed
