--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -16,6 +16,7 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog^], 
 
 === Fixed
 
+- Fix inconsistent handling of file errors in the command line interface.
 - Fix the creation of map images.
 
 == 0.8.0 - 2022-04-22
