--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -12,6 +12,10 @@ IMPORTANT: As per Semantic Versioning, the major version zero is for initial dev
 
 - Add command line option to use short species names in the AsciiDoc output. The species names are truncated by removing the authority (botany only).
 
+=== Changed
+
+- Do not use shorthand syntax for the breakable option in the AsciiDoc output.
+
 == 0.11.0 - 2023-04-15
 
 === Changed
